[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/game_pong2d.gd" type="Script" id=1]
[ext_resource path="res://sprites/ball.png" type="Texture" id=2]
[ext_resource path="res://sprites/player.png" type="Texture" id=3]
[ext_resource path="res://fonts/SyneTactile-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[node name="GamePong2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BallSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlayerLeftSprite" type="Sprite" parent="."]
position = Vector2( 20, 300 )
texture = ExtResource( 3 )

[node name="PlayerRightSprite" type="Sprite" parent="."]
position = Vector2( 780, 300 )
texture = ExtResource( 3 )

[node name="HUDNode" type="Node" parent="."]

[node name="PlayerLeftGoalLabel" type="Label" parent="HUDNode"]
margin_left = 300.0
margin_top = 50.0
margin_right = 340.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerRightGoalLabel" type="Label" parent="HUDNode"]
margin_left = 500.0
margin_top = 50.0
margin_right = 540.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
